+ Support for async step argument transformations. Fixes #2230
+ Support for ValueTask and ValueTask<T> binding methods (step definitions, hooks, step argument transformations)
+ Rules now support Background blocks
+ Collect binding errors (type load, binding, step definition) and report them as exception when any of the tests are executed.

Changes:
+ Existing step definition expressions detected to be either regular or cucumber expression. Check https://docs.specflow.org/projects/specflow/en/latest/Guides/UpgradeSpecFlow3To4.html for potential upgrade issues.
+ Default step definition skeletons are generating cucumber expressions.
+ 'ScenarioInfo.ScenarioAndFeatureTags' has been deprecated in favor of 'ScenarioInfo.CombinedTags'. Now both contain rule tags as well.
+ The interface ISpecFlowOutputHelper has been moved to the TechTalk.SpecFlow namespace (from TechTalk.SpecFlow.Infrastructure).
+ BugFix: SF2649 - AggregateExceptions thrown by async StepDefinition methods are no longer consumed; but passed along to the test host.


3.10

Features:
+ Proper async/await implementation


after 3.9.58

Features:
+ Introduce ability to register and resolve global dependencies using Autofac

Fixes:
+ Support [TableAliases] also outside `CreateInstance`&`CreateSet`. Fixes #1384
+ EnumerableValueRetriever resolves a ValueRetriever for each element in the enumeration instead of reusing the ValueRetriever of the first item in the list. Fixes #2626

3.9.58

Changes:
+ adjust the duration output to milliseconds if it's below 300ms threshold
+ Bug Fix: Tests with @ignore tag were still being run

3.9.52

Changes:
+ improve Service.GetValueRetrieverFor performance
+ Add DateTimeStyles to DateTimeValueRetriever and DateTimeOffsetValueRetriever
+ Update NUnit3TestGeneratorProvider - SetTestMethod and SetRowTest are now virtual so that it can be replaced by generator plugins

3.9.40

Changes:
+ Remove Cucumber- Messages