@@ -14,6 +14,7 @@ Features:
 + Support for ValueTask and ValueTask<T> binding methods (step definitions, hooks, step argument transformations)
 + Rules now support Background blocks
 + Collect binding errors (type load, binding, step definition) and report them as exception when any of the tests are executed.
++ Support for DateOnly types.
 
 Changes:
 + Existing step definition expressions detected to be either regular or cucumber expression. Check https://docs.specflow.org/projects/specflow/en/latest/Guides/UpgradeSpecFlow3To4.html for potential upgrade issues.
